spell check and more edits to future work to address some of the nathans comments

--- a/1_intro.tex
+++ b/1_intro.tex
@@ -4,7 +4,7 @@ Ultra-low-power (ULP) sensor devices are increasingly being deployed for a varie
 % 
 % These devices collect data from their deployed environment and must process the data to support applications.
 % 
-These devices are composed of low-power sensors attached to an ULP microcontroller, which communicates to other edge devices or to the cloud via a low-power radio, all powered by a small battery or from energy harvested from the enviroment.
+These devices are composed of low-power sensors attached to an ULP microcontroller, which communicates to other edge devices or to the cloud via a low-power radio, all powered by a small battery or from energy harvested from the environment.
 % 
 The sensors on these devices are increasingly capable --- ranging from high-definition image sensors~\cite{naderiparizi2018towards} to multi-sensor arrays~\cite{laput2017synthetic} --- producing a growing volume of data.
 % 
@@ -18,7 +18,7 @@ In particular, ULP sensor systems are extremely energy-constrained --- batteries
 % 
 One solution is to offload processing, but communication uses much more energy than local compute.
 % 
-Thus, the energy-efficiency of onboard compute is the key determinant of application successs.
+Thus, the energy-efficiency of onboard compute is the key determinant of application success.
 % 
 However, existing, general-purposes systems suffer fundamental inefficiencies.
 % 
@@ -185,7 +185,7 @@ Together these works support the following thesis:
 \begin{adjustwidth}{1cm}{1cm}
 High energy-efficiency can be achieved 
 % with new execution models integrated 
-across the system stack from software to silicon without signficantly compromising on programmability by leveraging new execution models to reduce instruction fetch/decode, pipeline-control, and data supply energies.
+across the system stack from software to silicon without significantly compromising on programmability by leveraging new execution models to reduce instruction fetch/decode, pipeline-control, and data supply energies.
 % 
 
 \end{adjustwidth}
