--- a/2_background.tex
+++ b/2_background.tex
@@ -342,7 +342,7 @@ Dataflow architectures, like vector machines, also have a long history~\cite{den
 % 
 % Although pure dataflow architecture have not enjoyed the same commercial success as vector machines,
 % 
-In particular, dataflow is prev.lent today as part out-of-order (OoO) execution engines, where restricted dataflow improves performance and reduces RF
+In particular, dataflow is prevalent today as part out-of-order (OoO) execution engines, where restricted dataflow improves performance and reduces RF
 pressure~\cite{bracy2004dataflow,sassone2004dynamic,kim2002instruction,sembrant2015long,acsiliouglu2015lazy}.
 % 
 However, pure dataflow architectures have not found the same commercial success, but spatial-dataflow architectures still show great promise for improving energy efficiency and performance.
