--- a/8_conclusion.tex
+++ b/8_conclusion.tex
@@ -75,6 +75,6 @@ Compared to COTS MCUs, \riptide demonstrates the significant progress made by th
 
 These contributions form the basis of a new energy-minimal, ULP sensor system stack.
 % 
-They show that extreme energy-efficiency can be achieved without signficantly compromising on programmability.
+They show that extreme energy-efficiency can be achieved without significantly compromising on programmability.
 %
 This is the power of rethinking the entire stack; optimizing at multiple levels at once, reduces energy, increases performance, and ultimately enables new applications.
