--- a/snafu/0_intro.tex
+++ b/snafu/0_intro.tex
@@ -11,7 +11,7 @@ in the shared execution pipeline, a significant inefficiency at ULP-scale.
 % 
 Eliminating these overheads can reduce energy by nearly half, proving that, despite their low operating power, \manic and other existing programmable ULP designs~\cite{dally:ieee08:elm,hempstead2005ultra,warneke200417,nazhandali2005energy} are not energy-minimal.
 % 
-Alternatively, custom ASICs would achieve energy-minimality, but come at high upfront cost~\cite{hotmobile2021} and with severely limited application scope, risking quick obsolece.
+Alternatively, custom ASICs would achieve energy-minimality, but come at high upfront cost~\cite{hotmobile2021} and with severely limited application scope, risking quick obsolesce.
 % 
 Thus, there is still a need for new architectures that achieve ULP ($<$1\,mW), \emph{energy-minimal} operation while maintaining a high degree of design flexibility and ease of programmability.
 
