--- a/manic/6_discuss.tex
+++ b/manic/6_discuss.tex
@@ -3,7 +3,7 @@
 Towards the new ULP sensor system stack, \manic contributes new ULP computer architecture and \msilicon contributes a silicon prototype.
 % 
 % Building these systems provided four key take-aways.
-There are four key take-aways from our experience building these systems.
+There are four key takeaways from our experience building these systems.
 % 
 First, \msilicon emphasizes even more the inefficiency of existing commodity MCUs.
 % 
