updates to table in background to reflect changes we made in riptide

--- a/2_background.tex
+++ b/2_background.tex
@@ -559,7 +559,7 @@ as steering never fires unneeded operations.
 % 
 In particular, the figures highlight what makes the ULP sensor domain different.
 % 
-Specifically, most prior CGRAs target much higher power domains ($\approx$100\,mW~\cite{weng2020dsagen,karunaratne2017hycube,nowatzki:isca17:stream-dataflow,tan2018stitch,weng2020hybrid} or even up to 100\,W~\cite{plasticine,voitsechov2014single}),
+Specifically, most prior CGRAs target much higher power domains (0.1-1W~\cite{weng2020dsagen,karunaratne2017hycube,nowatzki:isca17:stream-dataflow,tan2018stitch,weng2020hybrid} or even up to 100\,W~\cite{plasticine,voitsechov2014single}),
 and their design decisions do not translate well to the ULP domain.
 %
 The few CGRAs targeting ULP operation ($\approx$1\,mW)~\cite{ipa,cma,srp} are not flexible and leave energy savings on the table. 
