--- a/floats.tex
+++ b/floats.tex
@@ -33,18 +33,18 @@
   \begin{tabular}{l|p{0.7in}p{0.7in}p{0.7in}|p{0.7in}p{0.7in}p{0.7in}|p{0.7in}p{0.7in}}
     \toprule
 	& \multicolumn{3}{c|}{\bf Ultra-low-power CGRAs} & \multicolumn{3}{c|}{\bf High-performance CGRAs} \\[.5ex]
-    & \bf ULP-SRP~\cite{srp} & \bf CMA~\cite{cma} & \bf IPA~\cite{ipa} & \bf HyCube~\cite{karunaratne2017hycube} & \bf Revel~\cite{weng2020hybrid} & \bf SGMF~\cite{voitsechov2014single} & \bf \snafu~\cite{snafu} & \bf \riptide \\
+    & \bf SRP~\cite{srp} & \bf CMA~\cite{cma} & \bf IPA~\cite{ipa} & \bf HyCube~\cite{wang2019hycube} & \bf Revel~\cite{weng2020hybrid} & \bf SGMF~\cite{voitsechov2014single} & \bf \snafu~\cite{snafu} & \bf \riptide~\cite{riptide} \\
     \midrule
-    \bf Fabric size         & 3$\times$3                                     & 8$\times$10        & 4$\times$4         & 4$\times$4                              & 5$\times$5                         & 8$\times$8 + 32 mem                  & N$\times$N (6$\times$6 evaluated) & N$\times$N (6$\times$6 evaluated) \\[.5ex]
-    \bf NoC                 & Neighbors only                                 & Neighbors only     & Neighbors only     & Static, bufferless, multi-hop           & Static \& dynamic NoCs (2$\times$) & Dynamic routing                      & Static, bufferless, multi-hop & Static, bufferless, multi-hop       \\[.5ex]
-    \bf PE assignment       & Static                                         & Static             & Static             & Static                                  & Static \emph{or} dynamic           & Dynamic                              & Static  & Static                              \\[.5ex]
+    \bf Fabric size         & 3$\times$3                                     & 8$\times$10        & 4$\times$4         & 4$\times$4                              & 5$\times$5                         & 8$\times$8\,\&\linebreak 32 mem                  & N$\times$N\,(6$\times$6 \linebreak evaluated) & N$\times$N\,(6$\times$6\linebreak evaluated) \\[.5ex]
+    \bf NoC                 & Neighbors only                                 & Neighbors only     & Neighbors only     & Static, \linebreak bufferless, multi-hop           & Static\,\& \linebreak dynamic NoCs (2$\times$) & Dynamic routing                      & Static, \linebreak bufferless, multi-hop & Static, \linebreak bufferless, multi-hop       \\[.5ex]
+    \bf PE assignment       & Static                                         & Static             & Static             & Static                                  & Static\,\emph{or}\linebreak dynamic           & Dynamic                              & Static  & Static                              \\[.5ex]
     \bf Time-share PEs?     & Yes                                            & Yes                & Yes                & Yes                                     & Yes                                & Yes                                  & No               & No                   \\[.5ex]
-    \bf Scheduling/PE firing           & Static                                         & Static             & Static             & Static                                  & Static \emph{or} dynamic           & Dynamic                              & Dynamic                  & Dynamic           \\[.5ex]
+    \bf Scheduling/PE firing           & Static                                         & Static             & Static             & Static                                  & Static\,\emph{or}\linebreak dynamic           & Dynamic                              & Dynamic                  & Dynamic           \\[.5ex]
     \bf Heterogeneous PEs?  & No                                             & No                 & No                 & No                                      & Yes                                & Yes                                  & Yes               & Yes                  \\[.5ex]
-    \bf Program support & VLIW/Simple loops$^1$            & VLIW/Simple loops$^1$      &  Simple loops$^1$                             & Simple loops$^1$                & Arbitrary (CUDA-like)                      & Loops that fit patterns & Vectorizeable loops & Arbitrary                    \\[.5ex]
+    \bf Program support & VLIW/Simple loops$^1$            & VLIW/Simple loops$^1$      &  Simple loops$^1$                             & Simple loops$^1$                & Loops that fit patterns                     & Arbitrary & Vectorizeable loops & Arbitrary                    \\[.5ex]
     \midrule
-    \bf Power               & 22\,mW                                         & 11\,mW             & 3--5\,mW           & 15--70\,mW                              & 160\,mW                            & 20\,W                                & $<$1\,mW               & $<$1\,mW           \\[.5ex]
-    \bf MOPS/mW (approx.)   & 30--100                                        & 100--200           & 140                & 60--90                                  & 60                                 & 60                                   & 305 (fabric)      & 438 (fabric)                  \\[.5ex]
+    \bf Power               & 22\,mW                                         & 11\,mW             & 3--5\,mW           & 140\,mW                              & 1.66\,W                            & 20\,W                                & $<$1\,mW               & $<$1\,mW           \\[.5ex]
+    \bf MOPS/mW (approx.)   & 30--100 \linebreak MIPS/mW                                        & 100--200 MIPS/mW           & 140\linebreak MIPS/mW              & 26 (system)                                 & 12/16\linebreak(fabric/system)                                & ---                                  & 134/97\linebreak (fabric/system)      & 254/117\linebreak(fabric/system)                  \\[.5ex]
     \bottomrule
   \end{tabular}
 
