--- a/paper.tex
+++ b/paper.tex
@@ -191,9 +191,9 @@ This research was sponsored by an Apple PhD Fellowship, the National Science Fou
 
 \tableofcontents % Prints the main table of contents
 
-\listoffigures % Prints the list of figures
+% \listoffigures % Prints the list of figures
 
-\listoftables % Prints the list of tables
+% \listoftables % Prints the list of tables
 
 %-------------------------------------------------------------------------------
 %	ABBREVIATIONS
@@ -276,6 +276,11 @@ This research was sponsored by an Apple PhD Fellowship, the National Science Fou
 \clearpage
 \bibliographystyle{IEEEtranS}
 \bibliography{refs,confs}
+
+\clearpage
+\thispagestyle{empty}
+\centering
+\includegraphics[height=2in]{figures/snazzy.pdf}	
 
 %-------------------------------------------------------------------------------
 
