--- a/riptide/1_intro.tex
+++ b/riptide/1_intro.tex
@@ -295,8 +295,7 @@ The SAT formulation finds configurations quickly ($<$\,3\,min), while the ILP fo
 \figRipTideIntroResults
 \paragraph{Summary of results}
 %
-We implement a complete \riptide system in RTL and synthesize it in
-Intel 22FFL, an industrial sub-28nm FinFET process with compiled memories.
+We implement a complete \riptide system in RTL and synthesize it in an industrial sub-28nm FinFET process with compiled memories.
 %
 Including core and memory, \riptide's area is just $\approx 0.5$mm$^2$.
 %
