--- a/riptide/8_method.tex
+++ b/riptide/8_method.tex
@@ -2,8 +2,7 @@
 \label{riptide:method}
 
 We evaluate a complete \riptide system: the compiler built using LLVM and the
-microarchitecture fully implemented in RTL in Intel 22FFL,
-an industrial, sub-28nm FinFET process.
+microarchitecture fully implemented in RTL in an industrial, sub-28nm FinFET process.
 
 \paragraph{Compiler}
 \riptide's compiler passes extend LLVM 12.0~\cite{llvm} and we compile workloads with
