--- a/riptide/floats.tex
+++ b/riptide/floats.tex
@@ -913,8 +913,8 @@
         22 &
 	TSMC 28 &
 %% 	UMC 28 &
-	Intel 22FFL &
-	\multicolumn{2}{c}{Intel 22FFL} \\
+	sub-28nm &
+	\multicolumn{2}{c}{sub-28nm} \\
         Fabric dimensions &
         % 8$\times$8 &
         % 3$\times$3 &
