switched title page to use cmu template

--- a/headers.tex
+++ b/headers.tex
@@ -26,6 +26,7 @@
 \usepackage[noadjust]{cite}
 \usepackage{cleveref}
 \usepackage{etoolbox}
+\usepackage{pdfpages}
 
 \crefformat{footnote}{#2\footnotemark[#1]#3}
 \patchcmd{\footnotemark}{\stepcounter{footnote}}{\refstepcounter{footnote}}{}{}
