--- a/paper.tex
+++ b/paper.tex
@@ -85,57 +85,7 @@ headsepline, % Uncomment to get a line under the header
 %	TITLE PAGE
 %----------------------------------------------------------------------------------------
 
-\begin{titlepage}
-\begin{center}
-
-\vspace*{.06\textheight}
-{\scshape\LARGE \univname\par}\vspace{1cm} % University name
-\textsc{\Large Doctoral Thesis}\\[0.5cm] % Thesis type
-
-\HRule \\[0.4cm] % Horizontal line
-{\LARGE \bfseries \ttitle\par}\vspace{0.4cm} % Thesis title
-\HRule \\[0.5cm] % Horizontal line
-
-\large{\bf CMU-CS-22-145}
- 
-\begin{flushleft} 
-\large
-\emph{Author:}\\
-\href{http://www.gobieski.com}{\authorname} % Author name - remove the \href bracket to remove the link
-\\[0.5cm]
-\emph{Committee:} \\
-Nathan Beckmann, Co-Chair \\
-Brandon Lucia, Co-Chair \\
-Todd Mowry \\
-Kenneth Mai \\
-Tony Nowatzki, External
-
-\end{flushleft}
-
-\vspace{1em}
-
-\large{August 2022}
-
-\vspace{1em}
-
-\large \textit{A thesis submitted in fulfillment of the requirements\\ for the degree of \degreename}\\[1cm] % University requirement text
-\deptname \\
-\schoolname \\
-\univname \\[0.3cm]
-5000 Forbes Avenue \\
-Pittsburgh, Pennsylvania 15213
-\\[0.5cm]
-
-\vfill
-\large{\textcopyright 2022 Graham Gobieski. All rights reserved.}
-
-\vspace{1em}
-
-This research was sponsored by an Apple PhD Fellowship, the National Science Foundation under award numbers CNS-1526342 and CCF-1815882, and the U.S. Army under award number W911NF1820218.  The views and conclusions contained in this document are those of the author and should not be interpreted as representing the official policies, either expressed or implied, of any sponsoring institution, the U.S. government or any other entity.
-
-\vfill
-\end{center}
-\end{titlepage}
+\includepdf{title/title.pdf}
 
 %----------------------------------------------------------------------------------------
 %	DECLARATION PAGE
